--- a/foodie-api/src/main/resources/static/admin/app/manage.html
+++ b/foodie-api/src/main/resources/static/admin/app/manage.html
@@ -16,6 +16,16 @@
         .version-list {
             margin-top: 20px;
         }
+        .operation-btns {
+            display: flex;
+            gap: 8px;
+            flex-wrap: wrap;
+        }
+        .operation-btns .el-button {
+            margin-left: 0;
+            margin-right: 0;
+            margin-bottom: 4px;
+        }
     </style>
 </head>
 <body>
@@ -45,9 +55,11 @@
                 </el-table-column>
                 <el-table-column label="操作" width="250">
                     <template slot-scope="scope">
-                        <el-button size="mini" @click="showEditAppDialog(scope.row)">编辑</el-button>
-                        <el-button size="mini" type="success" @click="showAddVersionDialog(scope.row)">添加版本</el-button>
-                        <el-button size="mini" type="primary" @click="showVersionList(scope.row)">版本列表</el-button>
+                        <div class="operation-btns">
+                            <el-button size="mini" @click="showEditAppDialog(scope.row)">编辑</el-button>
+                            <el-button size="mini" type="success" @click="showAddVersionDialog(scope.row)">添加版本</el-button>
+                            <el-button size="mini" type="primary" @click="showVersionList(scope.row)">版本列表</el-button>
+                        </div>
                     </template>
                 </el-table-column>
             </el-table>
@@ -253,7 +265,7 @@
                 showAddVersionDialog(app) {
                     this.currentApp = app;
                     this.newVersion = {
-                        appId: app.id,
+                        appKey: app.appKey,
                         versionName: '',
                         versionCode: 1,
                         forceUpdate: 0,
@@ -265,7 +277,7 @@
                 submitVersion() {
                     this.$refs.versionForm.validate(valid => {
                         if (valid) {
-                            axios.post('/app/version/add', this.newVersion)
+                            axios.post('/app/version/create', this.newVersion)
                                 .then(res => {
                                     if (res.data.status === 200) {
                                         this.$message.success('添加版本成功');
